Update landing page with latest changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ThreeSevens - Grow Your Business Online</title>
+  <title>ThreeSeven - Grow Your Business Online</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.10.3/cdn.min.js" defer></script>
 </head>
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header class="bg-white shadow-md sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-indigo-600">ThreeSevens</h1>
+      <h1 class="text-2xl font-bold text-indigo-600">ThreeSeven</h1>
       <nav class="space-x-6 hidden md:block">
         <a href="#features" class="text-gray-600 hover:text-indigo-600">Features</a>
         <a href="#portfolio" class="text-gray-600 hover:text-indigo-600">Portfolio</a>
@@ -27,7 +27,7 @@
   <section class="bg-gray-100 py-20 text-center" x-data="{ show: false }" x-init="setTimeout(() => show = true, 200)" x-show="show" x-transition>
     <div class="max-w-3xl mx-auto px-4">
       <h2 class="text-4xl font-extrabold mb-4">Build Stunning Websites That Drive Traffic & Sales</h2>
-      <p class="text-lg text-gray-600 mb-8">At ThreeSevens, we help businesses turn ideas into high-converting websites that grow revenue.</p>
+      <p class="text-lg text-gray-600 mb-8">At ThreeSeven, we help businesses turn ideas into high-converting websites that grow revenue.</p>
       <a href="#signup" class="bg-indigo-600 text-white px-8 py-3 rounded-full text-lg hover:bg-indigo-700 transition transform hover:scale-105">Start Growing Today</a>
     </div>
   </section>
@@ -35,7 +35,7 @@
   <!-- Features Section -->
   <section id="features" class="py-16 bg-white">
     <div class="max-w-6xl mx-auto px-4" x-data x-intersect="$el.classList.add('animate-fade-in')">
-      <h3 class="text-3xl font-bold text-center mb-12">Why Choose ThreeSevens</h3>
+      <h3 class="text-3xl font-bold text-center mb-12">Why Choose ThreeSeven</h3>
       <div class="grid md:grid-cols-3 gap-10">
         <div class="text-center">
           <h4 class="text-xl font-semibold mb-2">Conversion-Optimized Design</h4>
@@ -83,7 +83,7 @@
       <h3 class="text-3xl font-bold mb-10">What Our Clients Say</h3>
       <div class="space-y-8">
         <blockquote>
-          <p class="text-xl italic">"ThreeSevens transformed our online presence and tripled our traffic in just 3 months!"</p>
+          <p class="text-xl italic">"ThreeSeven transformed our online presence and tripled our traffic in just 3 months!"</p>
           <footer class="mt-2 text-gray-600">- Sarah L., E-commerce Owner</footer>
         </blockquote>
         <blockquote>
@@ -91,7 +91,7 @@
           <footer class="mt-2 text-gray-600">- David R., Startup Founder</footer>
         </blockquote>
         <blockquote>
-          <p class="text-xl italic">"Professional, responsive, and effective. We highly recommend ThreeSevens."</p>
+          <p class="text-xl italic">"Professional, responsive, and effective. We highly recommend ThreeSeven."</p>
           <footer class="mt-2 text-gray-600">- Amanda K., Agency Director</footer>
         </blockquote>
       </div>
@@ -140,14 +140,14 @@
   <!-- Final Call to Action -->
   <section id="signup" class="bg-indigo-600 text-white py-16 text-center">
     <h3 class="text-3xl font-bold mb-4">Ready to Supercharge Your Online Growth?</h3>
-    <p class="text-lg mb-6">Join hundreds of businesses growing with ThreeSevens. Get started today!</p>
+    <p class="text-lg mb-6">Join hundreds of businesses growing with ThreeSeven. Get started today!</p>
     <a href="#" class="bg-white text-indigo-600 px-8 py-3 rounded-full font-semibold hover:bg-gray-100 transition transform hover:scale-105">Sign Up Now</a>
   </section>
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-white py-10">
     <div class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center">
-      <p class="mb-4 md:mb-0">&copy; 2025 ThreeSevens. All rights reserved.</p>
+      <p class="mb-4 md:mb-0">&copy; 2025 ThreeSeven. All rights reserved.</p>
       <div class="space-x-6">
         <a href="#" class="hover:underline">Privacy Policy</a>
         <a href="#" class="hover:underline">Terms of Service</a>
