Update landing page with latest changes

--- a/index.html
+++ b/index.html
@@ -54,28 +54,43 @@
   </section>
 
   <!-- Portfolio Section -->
-  <section id="portfolio" class="py-16 bg-gray-50">
-    <div class="max-w-6xl mx-auto px-4 text-center">
-      <h3 class="text-3xl font-bold mb-12">Our Work</h3>
-      <div class="grid md:grid-cols-3 gap-8">
-        <div class="bg-white p-4 shadow-md rounded-lg transform hover:scale-105 transition">
-          <img src="https://via.placeholder.com/300x200" alt="Project 1" class="rounded mb-4">
-          <h4 class="text-xl font-semibold">E-Commerce Boost</h4>
-          <p class="text-gray-600">Revamped design led to a 200% increase in conversion rate.</p>
-        </div>
-        <div class="bg-white p-4 shadow-md rounded-lg transform hover:scale-105 transition">
-          <img src="https://via.placeholder.com/300x200" alt="Project 2" class="rounded mb-4">
-          <h4 class="text-xl font-semibold">Local Business SEO</h4>
-          <p class="text-gray-600">Improved local search visibility with a new responsive website.</p>
-        </div>
-        <div class="bg-white p-4 shadow-md rounded-lg transform hover:scale-105 transition">
-          <img src="https://via.placeholder.com/300x200" alt="Project 3" class="rounded mb-4">
-          <h4 class="text-xl font-semibold">Startup Launch</h4>
-          <p class="text-gray-600">Helped a startup go live with a branded landing page and email funnel.</p>
-        </div>
+<section id="portfolio" class="py-16 bg-gray-50">
+  <div class="max-w-6xl mx-auto px-4 text-center">
+    <h3 class="text-3xl font-bold mb-12">Our Work</h3>
+    <div class="grid md:grid-cols-3 gap-8">
+      <div class="bg-white p-4 shadow-md rounded-lg transform hover:scale-105 transition">
+        <img src="https://source.unsplash.com/300x200/?website,design" alt="Project 1" class="rounded mb-4 object-cover w-full h-48">
+        <h4 class="text-xl font-semibold">Modern Website Redesign</h4>
+        <p class="text-gray-600">A sleek redesign for a tech startup to improve user engagement.</p>
+      </div>
+      <div class="bg-white p-4 shadow-md rounded-lg transform hover:scale-105 transition">
+        <img src="https://source.unsplash.com/300x200/?ecommerce,store" alt="Project 2" class="rounded mb-4 object-cover w-full h-48">
+        <h4 class="text-xl font-semibold">E-commerce Platform Launch</h4>
+        <p class="text-gray-600">Built a full-featured online store with seamless checkout experience.</p>
+      </div>
+      <div class="bg-white p-4 shadow-md rounded-lg transform hover:scale-105 transition">
+        <img src="https://source.unsplash.com/300x200/?seo,marketing" alt="Project 3" class="rounded mb-4 object-cover w-full h-48">
+        <h4 class="text-xl font-semibold">SEO & Marketing Campaign</h4>
+        <p class="text-gray-600">Boosted organic traffic and lead generation for a local business.</p>
+      </div>
+      <div class="bg-white p-4 shadow-md rounded-lg transform hover:scale-105 transition">
+        <img src="https://source.unsplash.com/300x200/?startup,landingpage" alt="Project 4" class="rounded mb-4 object-cover w-full h-48">
+        <h4 class="text-xl font-semibold">Startup Landing Page</h4>
+        <p class="text-gray-600">Designed a compelling landing page to maximize sign-ups.</p>
+      </div>
+      <div class="bg-white p-4 shadow-md rounded-lg transform hover:scale-105 transition">
+        <img src="https://source.unsplash.com/300x200/?mobile,app" alt="Project 5" class="rounded mb-4 object-cover w-full h-48">
+        <h4 class="text-xl font-semibold">Mobile App Website</h4>
+        <p class="text-gray-600">Created an engaging site showcasing a mobile app’s features.</p>
+      </div>
+      <div class="bg-white p-4 shadow-md rounded-lg transform hover:scale-105 transition">
+        <img src="https://source.unsplash.com/300x200/?business,consulting" alt="Project 6" class="rounded mb-4 object-cover w-full h-48">
+        <h4 class="text-xl font-semibold">Consulting Firm Website</h4>
+        <p class="text-gray-600">Developed a professional site to build client trust and inquiries.</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Testimonials Section -->
   <section id="testimonials" class="bg-gray-50 py-16">
