Update landing page with latest changes

--- a/index.html
+++ b/index.html
@@ -6,53 +6,8 @@
   <title>ThreeSeven - Grow Your Business Online</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.10.3/cdn.min.js" defer></script>
-
-  <style>
-    /* Animated cascading blue gradient background */
-    .animated-bg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: linear-gradient(-45deg, #3b82f6, #2563eb, #1e40af, #3b82f6);
-      background-size: 400% 400%;
-      animation: gradientShift 30s ease infinite;
-      z-index: -1;
-    }
-
-    @keyframes gradientShift {
-      0% {
-        background-position: 0% 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      100% {
-        background-position: 0% 50%;
-      }
-    }
-
-    body {
-      background: transparent !important;
-      position: relative;
-      margin: 0;
-      min-height: 100vh;
-    }
-
-    .animate-fade-in {
-      animation: fadeIn 1s ease-out forwards;
-    }
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(20px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-  </style>
 </head>
 <body class="text-gray-800">
-
-  <!-- Animated Background -->
-  <div class="animated-bg"></div>
 
   <!-- Header -->
   <header class="bg-white shadow-md sticky top-0 z-50">
@@ -69,11 +24,14 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="bg-gray-100 py-20 text-center" x-data="{ show: false }" x-init="setTimeout(() => show = true, 200)" x-show="show" x-transition>
-    <div class="max-w-3xl mx-auto px-4">
-      <h2 class="text-4xl font-extrabold mb-4">Build Stunning Websites That Drive Traffic & Sales</h2>
-      <p class="text-lg text-gray-600 mb-8">At ThreeSeven, we help businesses turn ideas into high-converting websites that grow revenue.</p>
-      <a href="#signup" class="bg-indigo-600 text-white px-8 py-3 rounded-full text-lg hover:bg-indigo-700 transition transform hover:scale-105">Start Growing Today</a>
+  <section class="relative bg-gray-100 py-20 text-center overflow-hidden" x-data="{ show: false }" x-init="setTimeout(() => show = true, 200)" x-show="show" x-transition>
+    <!-- Blue cascading animated gradient background -->
+    <div class="absolute inset-0 -z-10 bg-gradient-to-r from-blue-500 via-blue-700 to-blue-900 bg-[length:400%_400%] animate-gradientShift"></div>
+
+    <div class="max-w-3xl mx-auto px-4 relative z-10">
+      <h2 class="text-4xl font-extrabold mb-4 text-white">Build Stunning Websites That Drive Traffic & Sales</h2>
+      <p class="text-lg text-blue-200 mb-8">At ThreeSeven, we help businesses turn ideas into high-converting websites that grow revenue.</p>
+      <a href="#signup" class="bg-white text-blue-800 px-8 py-3 rounded-full text-lg hover:bg-blue-100 transition transform hover:scale-105">Start Growing Today</a>
     </div>
   </section>
 
@@ -104,17 +62,17 @@
       <h3 class="text-3xl font-bold mb-12">Our Work</h3>
       <div class="grid md:grid-cols-3 gap-8">
         <div class="bg-white p-4 shadow-md rounded-lg transform hover:scale-105 transition">
-          <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=300&q=80" alt="Project 1" class="rounded mb-4">
+          <img src="https://via.placeholder.com/300x200" alt="Project 1" class="rounded mb-4">
           <h4 class="text-xl font-semibold">E-Commerce Boost</h4>
           <p class="text-gray-600">Revamped design led to a 200% increase in conversion rate.</p>
         </div>
         <div class="bg-white p-4 shadow-md rounded-lg transform hover:scale-105 transition">
-          <img src="https://images.unsplash.com/photo-1515377905703-c4788e51af15?auto=format&fit=crop&w=300&q=80" alt="Project 2" class="rounded mb-4">
+          <img src="https://via.placeholder.com/300x200" alt="Project 2" class="rounded mb-4">
           <h4 class="text-xl font-semibold">Local Business SEO</h4>
           <p class="text-gray-600">Improved local search visibility with a new responsive website.</p>
         </div>
         <div class="bg-white p-4 shadow-md rounded-lg transform hover:scale-105 transition">
-          <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?auto=format&fit=crop&w=300&q=80" alt="Project 3" class="rounded mb-4">
+          <img src="https://via.placeholder.com/300x200" alt="Project 3" class="rounded mb-4">
           <h4 class="text-xl font-semibold">Startup Launch</h4>
           <p class="text-gray-600">Helped a startup go live with a branded landing page and email funnel.</p>
         </div>
@@ -198,4 +156,39 @@
         <a href="#" class="hover:underline">Terms of Service</a>
         <a href="#" class="hover:underline">Contact</a>
       </div>
-      <div class
+      <div class="space-x-4 mt-4 md:mt-0">
+        <a href="#"><img src="/icons/facebook.svg" alt="Facebook" class="inline h-6"></a>
+        <a href="#"><img src="/icons/twitter.svg" alt="Twitter" class="inline h-6"></a>
+        <a href="#"><img src="/icons/linkedin.svg" alt="LinkedIn" class="inline h-6"></a>
+      </div>
+    </div>
+  </footer>
+
+  <style>
+    .animate-fade-in {
+      animation: fadeIn 1s ease-out forwards;
+    }
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translateY(20px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes gradientShift {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
+    }
+
+    .animate-gradientShift {
+      animation: gradientShift 20s ease infinite;
+      background-size: 400% 400%;
+    }
+  </style>
+
+</body
